--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
-﻿# Python
-__pycache__/
-*.pyc
-.env
-.env.*
+# Temporary caches and environment files
+__pycache__/     # Python cache directory (if Python is added)
+*.pyc            # Compiled Python files (if Python is added)
+.env             # Local environment variables
+.env.*           # Additional environment configs
 
-# Node
-node_modules/
+# Dependency directories for future tools
+node_modules/    # Node packages (if Node tooling is added)
 logins.txt
 
-# Outros
+# Miscellaneous output artifacts
 *.log
 *.db
 output/
